--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-`
+# MYSQL Configurations
+spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager
+spring.datasource.username=chamika
+spring.datasource.password=gigabytechassis890@
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
